# Afeb

./: .clang-format  .gitignore  Afeb  CMakeLists.txt  README.md  main.cpp
include/: Camera3D.h  CoordSystem.h  Error.h  GLSLProgram.h  GlslProgram.h  MainWindow.h  Triangle.h
shaders/: basic.frag  basic.vert
src/: Camera3D.cpp  CoordSystem.cpp  Error.cpp  GLSLProgram.cpp  GlslProgram.cpp  MainWindow.cpp  Triangle.cpp
